--- a/src/components/friends/FriendsHeader/FriendsHeader.css
+++ b/src/components/friends/FriendsHeader/FriendsHeader.css
@@ -26,6 +26,7 @@
 
 .friends-panel__requests,
 .friends-panel__add {
+  position: relative;
   display: flex;
   align-items: center;
   gap: 10px;
@@ -59,4 +60,22 @@
   display: flex;
   align-items: center;
   justify-content: center;
+}
+
+.requests_notification__badge {
+  position: absolute;
+  top: -6px;
+  right: -6px;
+  background-color: red;
+  color: white;
+  font-size: 12px;
+  font-weight: bold;
+  border-radius: 50%;
+  padding: 4px 7px;
+  min-width: 12px;
+  height: 12px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  z-index: 1;
 }
