--- a/src/components/AuthForm/AuthForm.css
+++ b/src/components/AuthForm/AuthForm.css
@@ -118,3 +118,20 @@ form {
   margin: 0 auto 20px;
   display: block;
 }
+
+.google-login-btn {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 10px;
+  border-radius: 15px;
+  background: black;
+  color: white;
+  font-size: 15px;
+}
+
+.google-login-btn img {
+  width: 20px;
+  height: 20px;
+  margin-right: 8px;
+}
